# cpp

./: CMakeLists.txt
module00/ex00/: Makefile  megaphone.cpp
module00/ex01/: Contact.cpp  Contact.hpp  Makefile  PhoneBook.cpp  PhoneBook.hpp  main.cpp
module01/ex00/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  randomChump.cpp
module01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  newZombie.cpp  zombieHorde.cpp
module01/ex02/: Makefile  main.cpp
module01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  main.cpp
module01/ex04/: Makefile  main.cpp  pippo
module01/ex05/: Harl.cpp  Harl.hpp  main.cpp
module01/ex06/: Harl.cpp  Harl.hpp  Makefile  main.cpp
module02/ex00/: Fixed.cpp  Fixed.hpp  Makefile
module02/ex01/: Fixed.cpp  Fixed.hpp  main.cpp
module02/ex02/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
module03/ex00/: Borderlands.cpp  Borderlands.hpp  ClapTrap.cpp  ClapTrap.hpp  Makefile  main.cpp
module03/ex01/: Borderlands.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
module03/ex02/: Borderlands.cpp  FragTrap.hpp  Makefile  main.cpp
module03/ex03/: ClapTrap.cpp  ClapTrap.hpp  DiamondTrap.cpp  DiamondTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
module04/ex00/: Animal.cpp  Animal.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  WrongAnimal.hpp  WrongCat.cpp  WrongCat.hpp  main.cpp
module04/ex01/: Animal.cpp  Animal.hpp  Brain.hpp  Cat.cpp  Makefile  WrongAnimal.cpp  WrongAnimal.hpp  WrongCat.cpp  main.cpp
module04/ex02/: Animal.hpp  Brain.cpp  Cat.hpp  Dog.cpp  Dog.hpp  WrongCat.hpp  main.cpp
module04/ex03/: AMateria.cpp  AMateria.hpp  Character.cpp  Character.hpp  Cure.cpp  Cure.hpp  ICharacter.hpp  IMateriaSource.hpp  Ice.cpp  Ice.hpp  Makefile  MateriaSource.cpp  MateriaSource.hpp  main.cpp
module05/ex00/: Bureaucrat.cpp  Bureaucrat.hpp  BureaucreatException.hpp  Makefile  main.cpp
module05/ex01/: Bureaucrat.cpp  Bureaucrat.hpp  Form.cpp  Form.hpp  Makefile  main.cpp
module05/ex02/: AForm.hpp  Bureaucrat.cpp  Bureaucrat.hpp  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
module05/ex03/: AForm.cpp  AForm.hpp  Bureaucrat.cpp  Bureaucrat.hpp  Intern.cpp  Intern.hpp  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
module06/ex00/: Makefile  ScalarConverter.cpp  ScalarConverter.hpp  convert  main.cpp
module06/ex01/: Makefile  main.cpp  serialize
module06/ex02/: Base.hpp  Makefile  identify  main.cpp
module07/ex00/: Makefile  Wathever.hpp  main.cpp  template
module07/ex01/: Iter.hpp  Makefile  iter  main.cpp
module07/ex02/: Array  Array.hpp  Array.tpp  Makefile  main.cpp
module08/ex00/: Easyfind.hpp  Easyfind.tpp  Makefile  easyfind  main.cpp
module08/ex01/: Makefile  Span.cpp  Span.hpp  main.cpp  span
module08/ex02/: Makefile  MutantStack.hpp  include.h  main.cpp  mutated_abomination
module09/ex00/: Makefile  btc  (+7 more)
(+10 files in other folders)
