cmake_minimum_required(VERSION 3.25)
project(cpp)

set(CMAKE_CXX_STANDARD 98)

add_executable(megaphone module00/ex00/megaphone.cpp module00/ex01/Contact.cpp)
add_executable(phonebook module00/ex01/PhoneBook.cpp module00/ex01/Contact.cpp module00/ex01/main.cpp)
add_executable(BraiiiiiiinnnzzzZ module01/ex00/main.cpp module01/ex00/Zombie.cpp module01/ex00/newZombie.cpp module01/ex00/randomChump.cpp)
add_executable(Moar_brainz module01/ex01/main.cpp module01/ex01/Zombie.cpp module01/ex01/newZombie.cpp module01/ex01/randomChump.cpp module01/ex01/zombieHorde.cpp)
add_executable(HI_THIS_IS_BRAIN module01/ex02/main.cpp)
add_executable(Unnecessary_violence module01/ex03/Weapon.cpp module01/ex03/HumanA.cpp module01/ex03/HumanB.cpp module01/ex03/main.cpp)
add_executable(Sed_is_for_losers module01/ex04/main.cpp)
add_executable(Harl_2.0 module01/ex05/Harl.cpp module01/ex05/Harl.hpp module01/ex05/main.cpp)
add_executable(Harl_2.0.1 module01/ex06/Harl.cpp module01/ex06/main.cpp)
add_executable(Fixed00 module02/ex00/Fixed.cpp module02/ex00/main.cpp)
add_executable(Fixed01 module02/ex01/Fixed.cpp module02/ex01/main.cpp)
add_executable(Fixed02 module02/ex02/Fixed.cpp module02/ex02/main.cpp)
add_executable(claptrap module03/ex00/ClapTrap.cpp module03/ex00/main.cpp module03/ex00/Borderlands.cpp)
add_executable(scavtrap module03/ex01/Borderlands.cpp module03/ex01/ClapTrap.cpp module03/ex01/main.cpp module03/ex01/ScavTrap.cpp)
add_executable(fragtrap module03/ex02/Borderlands.cpp module03/ex02/ClapTrap.cpp module03/ex02/ScavTrap.cpp module03/ex02/main.cpp module03/ex02/FragTrap.cpp)
add_executable(diamondtrap module03/ex03/Borderlands.cpp module03/ex03/ClapTrap.cpp module03/ex03/FragTrap.cpp module03/ex03/ScavTrap.cpp module03/ex03/main.cpp module03/ex03/DiamondTrap.cpp module03/ex03/DiamondTrap.cpp)
add_executable(Polymorphism module04/ex00/Animal.cpp module04/ex00/Cat.cpp module04/ex00/Dog.cpp module04/ex00/WrongAnimal.cpp module04/ex00/WrongCat.cpp module04/ex00/main.cpp)
add_executable(world_on_fire module04/ex01/Animal.cpp module04/ex01/Cat.cpp module04/ex01/Dog.cpp module04/ex01/WrongAnimal.cpp module04/ex01/main.cpp module04/ex01/Brain.cpp module04/ex01/WrongCat.cpp)
add_executable(Abstract_class module04/ex02/Animal.cpp module04/ex02/Brain.cpp module04/ex02/Cat.cpp module04/ex02/Dog.cpp module04/ex02/WrongAnimal.cpp module04/ex02/WrongCat.cpp module04/ex02/main.cpp)
add_executable(Interface_recap module04/ex03/AMateria.cpp module04/ex03/main.cpp module04/ex03/Cure.cpp module04/ex03/Ice.cpp module04/ex03/Character.cpp module04/ex03/IMateriaSource.hpp module04/ex03/MateriaSource.cpp)
add_executable(Bureaucrat module05/ex00/Bureaucrat.cpp module05/ex00/main.cpp module05/ex00/BureaucreatException.hpp module05/ex00/include.h)
add_executable(Form module05/ex01/Bureaucrat.cpp module05/ex01/Form.cpp module05/ex01/main.cpp)
add_executable(AForm module05/ex02/Bureaucrat.cpp module05/ex02/AForm.cpp module05/ex02/main.cpp  module05/ex02/ShrubberyCreationForm.cpp module05/ex02/PresidentialPardonForm.cpp module05/ex02/RobotomyRequestForm.cpp)
